bug fixes mpromotion.html(z-index and hot label size)

--- a/static/scss/style-promotion.scss
+++ b/static/scss/style-promotion.scss
@@ -83,8 +83,9 @@ $Topiccolor: #63bc8a;
                     position: absolute;
                     top: 15px;
                     left: -10px;
-                    width: 100px;
-                    height: 40px;
+                    width: 25%;
+                    min-width: 65px;
+                    height: 35px;
                     background-color: rgb(255, 81, 81);
                     border-radius: 30px;
                     border-bottom-left-radius: 0;
@@ -95,7 +96,7 @@ $Topiccolor: #63bc8a;
                     text-align: center;
                     align-items: center;
 
-                    font-size: 24px;
+                    font-size: 20px;
                     color: white;
                     font-weight: bold;
                 }
@@ -103,24 +104,23 @@ $Topiccolor: #63bc8a;
                 i::before {
                     content: '';
                     position: absolute;
-                    top: 40px;
+                    top: 35px;
+                    left: 0px;
+                    width: 10px;
+                    height: 10px;
+                    background-color: rgb(255, 81, 81);
+                }
+
+                i::after {
+                    content: '';
+                    position: absolute;
+                    top: 35px;
                     left: 0px;
                     width: 10px;
                     height: 20px;
                     border-top-left-radius: 20px;
                     border-bottom-left-radius: 20px;
                     background-color: rgb(185, 43, 43);
-                    z-index: 2;
-                }
-
-                i::after {
-                    content: '';
-                    position: absolute;
-                    top: 40px;
-                    left: 0px;
-                    width: 10px;
-                    height: 10px;
-                    background-color: rgb(255, 81, 81);
                 }
 
                 img {
